# xcrc-core-wallet

./: .gitignore  .python-version  .travis.yml  Makefile.am  README.md  configure.ac
contrib/devtools/: gen-manpages.sh
contrib/docker/: Dockerfile  entrypoint.sh  xaya.conf
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/init/: xayad.service
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/namecoin/: convertBechAddress.py
contrib/seeds/: nodes_test.txt
depends/hosts/: darwin.mk
doc/: Doxyfile.in  README.md  build-osx.md  release-process.md
doc/cryptocrowd/: README.md  interface.md  trading.md
doc/man/: Makefile.am  cryptocrowd-cli.1  cryptocrowd-qt.1  cryptocrowd-tx.1  cryptocrowd-wallet.1  cryptocrowdd.1  xaya-cli.1  xaya-qt.1  xaya-tx.1  xaya-wallet.1  xayad.1
doc/xaya/: README.md  addressrestrictions.md  blockchain.md  currencies.md  games.md  interface.md  trading.md
doc/xcrc/: currencies.md  games.md  mining.md
share/: setup.nsi.in
share/examples/: cryptocrowd.conf  xaya.conf
share/qt/: Info.plist.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chain.h  chainparams.cpp  chainparamsbase.cpp  clientversion.cpp  clientversion.h  init.cpp  net_processing.cpp  powdata.cpp  powdata.h  validation.cpp  validation.h  version.h  warnings.cpp  xaya-hash.cpp
src/rpc/: game.h  (+10 more)
(+112 files in other folders)
