dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=xcrcd.1
endif

if ENABLE_QT
  dist_man1_MANS+=xcrc-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=xcrc-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=xcrc-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=xcrc-wallet.1
endif
endif
